[gd_scene load_steps=24 format=2]

[ext_resource path="res://World_Selection/Portal2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://World_Selection/Player/PlayerMage.tscn" type="PackedScene" id=2]
[ext_resource path="res://World_Selection/Map/Assets/Story/clock.png" type="Texture" id=3]
[ext_resource path="res://World_Selection/Map/Assets/Story/Stable.png" type="Texture" id=4]
[ext_resource path="res://World_Selection/Map/Assets/Story/book.png" type="Texture" id=5]
[ext_resource path="res://Leaderboard/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://World_Selection/Map/Assets/Story/BrownWall.png" type="Texture" id=7]
[ext_resource path="res://World_Selection/Map/World1.tscn" type="PackedScene" id=8]
[ext_resource path="res://World_Selection/Map/Assets/Story/BrownTiles.png" type="Texture" id=9]
[ext_resource path="res://World_Selection/Map/World2.tscn" type="PackedScene" id=10]
[ext_resource path="res://World_Selection/Map/World3.tscn" type="PackedScene" id=11]
[ext_resource path="res://World_Selection/Map/Story Mode.gd" type="Script" id=12]
[ext_resource path="res://Character_Design/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://World_Selection/MainBackPortal.tscn" type="PackedScene" id=14]
[ext_resource path="res://World_Selection/Map/Assets/Story/Curtain.png" type="Texture" id=15]
[ext_resource path="res://World_Selection/Map/Assets/Story/Chair.png" type="Texture" id=16]
[ext_resource path="res://World_Selection/Map/Assets/Story/Shelves.png" type="Texture" id=17]
[ext_resource path="res://World_Selection/Map/Assets/Story/Doll.png" type="Texture" id=18]
[ext_resource path="res://World_Selection/Map/Assets/Story/Sign.png" type="Texture" id=19]
[ext_resource path="res://World_Selection/Map/Camera2D.gd" type="Script" id=20]

[sub_resource type="TileSet" id=1]
0/name = "BrownTiles.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 17
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Main Page" type="Node2D"]
scale = Vector2( 5, 5 )
script = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 40.2372, 160.185 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720877, 0, 0, -720876, 0, 0, -720875, 0, 0, -720874, 0, 0, -720873, 0, 0, -720872, 0, 0, -720871, 0, 0, -720870, 0, 0, -720869, 0, 0, -720868, 0, 0, -720867, 0, 0, -720866, 0, 0, -720865, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -655356, 0, 0, -655355, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -655351, 0, 0, -655350, 0, 0, -655349, 0, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -655345, 0, 0, -655344, 0, 0, -655343, 0, 0, -655342, 0, 0, -655341, 0, 0, -655340, 0, 0, -655339, 0, 0, -655338, 0, 0, -655337, 0, 0, -655336, 0, 0, -655335, 0, 0, -655334, 0, 0, -655333, 0, 0, -655332, 0, 0, -655330, 0, 0, -655329, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589814, 0, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -589805, 0, 0, -589804, 0, 0, -589803, 0, 0, -589802, 0, 0, -589801, 0, 0, -589800, 0, 0, -589799, 0, 0, -589797, 0, 0, -589796, 0, 0, -589795, 0, 0, -589794, 0, 0, -589793, 0, 0, -458754, 0, 0, -458753, 0, 0, -524286, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 0, -524268, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524263, 0, 0, -524262, 0, 0, -524261, 0, 0, -524260, 0, 0, -524259, 0, 0, -524258, 0, 0, -524257, 0, 0, -393218, 0, 0, -393217, 0, 0, -458751, 0, 0, -458750, 0, 0, -458748, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 0, -458732, 0, 0, -458731, 0, 0, -458728, 0, 0, -458727, 0, 0, -458726, 0, 0, -458725, 0, 0, -458724, 0, 0, -458723, 0, 0, -458722, 0, 0, -458721, 0, 0, -327682, 0, 0, -327681, 0, 0, -393215, 0, 0, -393214, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393201, 0, 0, -393200, 0, 0, -393198, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 0, 0, -393192, 0, 0, -393191, 0, 0, -393190, 0, 0, -393189, 0, 0, -393188, 0, 0, -393186, 0, 0, -393185, 0, 0, -262146, 0, 0, -262145, 0, 0, -327679, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -327653, 0, 0, -327652, 0, 0, -327651, 0, 0, -327649, 0, 0, -196610, 0, 0, -262143, 0, 0, -262141, 0, 0, -262139, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262128, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -262115, 0, 0, -262114, 0, 0, -262113, 0, 0, -131074, 0, 0, -131073, 0, 0, -196607, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196592, 0, 0, -196590, 0, 0, -196589, 0, 0, -196587, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -196579, 0, 0, -196578, 0, 0, -196577, 0, 0, -65538, 0, 0, -131072, 0, 0, -131071, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131056, 0, 0, -131054, 0, 0, -131053, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -2, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65515, 0, 0, -65509, 0, 0, -65508, 0, 0, -65506, 0, 0, -65505, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0 )

[node name="BrownWall" type="Sprite" parent="."]
position = Vector2( 287.517, -20.4123 )
scale = Vector2( 0.977654, 0.957955 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 571, 32 )

[node name="Curtain" type="Sprite" parent="."]
position = Vector2( 287.177, -53.2206 )
scale = Vector2( 0.977654, 0.957955 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 0, 0, 568, 65 )

[node name="clock" type="Sprite" parent="."]
position = Vector2( 253.26, -50.0941 )
texture = ExtResource( 3 )

[node name="ShelvesBody2D" type="StaticBody2D" parent="."]
position = Vector2( 420.084, -22.4947 )
scale = Vector2( 0.977654, 0.957955 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShelvesBody2D"]
position = Vector2( 0.613007, -5.00502 )
polygon = PoolVector2Array( -142.446, -38.2578, 148.178, -37.7702, 148.907, 30.6779, -142.446, 31.1868 )

[node name="Shelves" type="Sprite" parent="ShelvesBody2D/CollisionPolygon2D"]
position = Vector2( 3.55931, -4.07107 )
scale = Vector2( 1.14223, 1.14223 )
texture = ExtResource( 17 )
region_enabled = true
region_rect = Rect2( 0, 0, 257, 63 )

[node name="ShelvesBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 420.084, -22.4947 )
scale = Vector2( 0.977654, 0.957955 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ShelvesBody2D2"]
position = Vector2( 0.613007, -5.00502 )
polygon = PoolVector2Array( -142.446, -38.2578, 148.178, -37.7702, 148.907, 30.6779, -142.446, 31.1868 )

[node name="PlayerMage" parent="." instance=ExtResource( 2 )]
position = Vector2( 184, 87.9206 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="PlayerMage"]
current = true
smoothing_enabled = true
script = ExtResource( 20 )

[node name="Tween" type="Tween" parent="PlayerMage/Camera2D"]

[node name="TableSet" type="Control" parent="."]
margin_left = 490.322
margin_top = 87.3898
margin_right = 530.322
margin_bottom = 127.39
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChairBody2D2" type="StaticBody2D" parent="TableSet"]
position = Vector2( 18.7534, -7.44743 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet/ChairBody2D2"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.35672, -11.866, 9.74713, -11.866, 10.1709, 6.35681, -6.35672, 6.35681 )

[node name="Chair" type="Sprite" parent="TableSet/ChairBody2D2"]
position = Vector2( 0.45401, 1.64743 )
texture = ExtResource( 16 )

[node name="TableBody2D" type="StaticBody2D" parent="TableSet"]
position = Vector2( 19.9729, 17.1321 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet/TableBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -14.8325, -15.2563, 15.2563, -15.2563, 15.6801, 14.8325, -15.68, 15.6801 )

[node name="Stable" type="Sprite" parent="TableSet/TableBody2D"]
position = Vector2( -1.24115, 4.61393 )
texture = ExtResource( 4 )

[node name="ChairBody2D" type="StaticBody2D" parent="TableSet"]
position = Vector2( 18.2776, 44.2543 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet/ChairBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.35672, -11.866, 9.74713, -11.866, 10.1709, 6.35681, -6.35672, 6.35681 )

[node name="Chair" type="Sprite" parent="TableSet/ChairBody2D"]
position = Vector2( 0.45401, 1.64743 )
texture = ExtResource( 16 )

[node name="TableSet2" type="Control" parent="."]
margin_left = 388.07
margin_top = 69.9933
margin_right = 428.07
margin_bottom = 109.993
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChairBody2D2" type="StaticBody2D" parent="TableSet2"]
position = Vector2( 18.7534, -7.44743 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet2/ChairBody2D2"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.35672, -11.866, 9.74713, -11.866, 10.1709, 6.35681, -6.35672, 6.35681 )

[node name="Chair" type="Sprite" parent="TableSet2/ChairBody2D2"]
position = Vector2( 0.45401, 1.64743 )
texture = ExtResource( 16 )

[node name="TableBody2D" type="StaticBody2D" parent="TableSet2"]
position = Vector2( 19.9729, 17.1321 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet2/TableBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -14.8325, -15.2563, 15.2563, -15.2563, 15.6801, 14.8325, -15.68, 15.6801 )

[node name="Stable" type="Sprite" parent="TableSet2/TableBody2D"]
position = Vector2( -1.24115, 4.61393 )
texture = ExtResource( 4 )

[node name="ChairBody2D" type="StaticBody2D" parent="TableSet2"]
position = Vector2( 18.2776, 44.2543 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet2/ChairBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.35672, -11.866, 9.74713, -11.866, 10.1709, 6.35681, -6.35672, 6.35681 )

[node name="Chair" type="Sprite" parent="TableSet2/ChairBody2D"]
position = Vector2( 0.45401, 1.64743 )
texture = ExtResource( 16 )

[node name="TableSet3" type="Control" parent="."]
margin_left = 12.7125
margin_top = 91.8846
margin_right = 52.7125
margin_bottom = 131.885
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChairBody2D2" type="StaticBody2D" parent="TableSet3"]
position = Vector2( 18.7534, -7.44743 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet3/ChairBody2D2"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.35672, -11.866, 9.74713, -11.866, 10.1709, 6.35681, -6.35672, 6.35681 )

[node name="Chair" type="Sprite" parent="TableSet3/ChairBody2D2"]
position = Vector2( 0.45401, 1.64743 )
texture = ExtResource( 16 )

[node name="TableBody2D" type="StaticBody2D" parent="TableSet3"]
position = Vector2( 19.9729, 17.1321 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet3/TableBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -14.8325, -15.2563, 15.2563, -15.2563, 15.6801, 14.8325, -15.68, 15.6801 )

[node name="Stable" type="Sprite" parent="TableSet3/TableBody2D"]
position = Vector2( -1.24115, 4.61393 )
texture = ExtResource( 4 )

[node name="ChairBody2D" type="StaticBody2D" parent="TableSet3"]
position = Vector2( 18.2776, 44.2543 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TableSet3/ChairBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.35672, -11.866, 9.74713, -11.866, 10.1709, 6.35681, -6.35672, 6.35681 )

[node name="Chair" type="Sprite" parent="TableSet3/ChairBody2D"]
position = Vector2( 0.45401, 1.64743 )
texture = ExtResource( 16 )

[node name="DollBody2D" type="StaticBody2D" parent="."]
position = Vector2( 175.377, -0.353851 )
scale = Vector2( 2.16499, 2.16499 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DollBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -9.09653, -17.563, 9.98532, -16.8896, 13.5772, 1.51882, 9.08737, 9.15157, -9.5455, 9.37606, -12.9129, 1.06985 )

[node name="Doll" type="Sprite" parent="DollBody2D"]
position = Vector2( -0.853455, 0.223633 )
texture = ExtResource( 18 )

[node name="SignBody2D" type="StaticBody2D" parent="."]
position = Vector2( 510.398, 171.246 )
scale = Vector2( 1.22074, 1.61384 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SignBody2D"]
polygon = PoolVector2Array( -45.8953, -12.7027, 45.081, -12.3718, 45.2997, 12.7727, -45.4442, 12.3007 )

[node name="Sign" type="Sprite" parent="SignBody2D"]
position = Vector2( 3.05176e-05, 0 )
texture = ExtResource( 19 )

[node name="DollBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 398.494, 163.158 )
scale = Vector2( 1.9767, 1.9767 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DollBody2D2"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -9.09653, -17.563, 9.98532, -16.8896, 13.5772, 1.51882, 9.08737, 9.15157, -9.5455, 9.37606, -12.9129, 1.06985 )

[node name="Doll" type="Sprite" parent="DollBody2D2"]
position = Vector2( -0.853455, 0.223633 )
texture = ExtResource( 18 )

[node name="BookBody2D" type="StaticBody2D" parent="."]
position = Vector2( 509.279, 102.511 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BookBody2D"]
position = Vector2( -1.24115, 4.61393 )
polygon = PoolVector2Array( -6.43164, -13.9324, 9.04089, -13.9324, 8.7045, 3.55827, -6.93158, 3.16798 )

[node name="book" type="Sprite" parent="BookBody2D"]
position = Vector2( 0.0698242, -0.575638 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, -8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 9.00901, -14.3175 )
scale = Vector2( 0.545277, 0.363541 )
polygon = PoolVector2Array( 0, -8, 1024, -8, 991.13, 41.7625, 31.6741, 40.3762, 29.5207, 566.154, 992, 568, 991.13, 43.1487, 1024, -8, 1024.4, 593.5, 0.340475, 590.728 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 6, 6 )
transform = Transform2D( 6, 0, 0, 6, 0, 0 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 1.57314
margin_right = 124.0
margin_bottom = 16.5731
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Story Mode"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World1" parent="." instance=ExtResource( 1 )]
position = Vector2( 77.0034, 162.697 )
next_scene = ExtResource( 8 )

[node name="Label" type="Label" parent="World1"]
margin_left = -31.2997
margin_top = 5.4007
margin_right = 87.7003
margin_bottom = 25.4007
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "World 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World2" parent="." instance=ExtResource( 1 )]
position = Vector2( 194.579, 163.896 )
next_scene = ExtResource( 10 )

[node name="Label" type="Label" parent="World2"]
margin_left = -38.2997
margin_top = 5.4007
margin_right = 119.7
margin_bottom = 25.4007
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "World 2"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World3" parent="." instance=ExtResource( 1 )]
position = Vector2( 311.165, 164.495 )
next_scene = ExtResource( 11 )

[node name="Label" type="Label" parent="World3"]
margin_left = -29.2997
margin_top = 5.4007
margin_right = 85.7003
margin_bottom = 25.4007
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "World 3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackPortal" parent="." instance=ExtResource( 14 )]
position = Vector2( 67.742, 45.9185 )

[node name="Label" type="Label" parent="BackPortal"]
margin_left = -32.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Return to 
Main Page"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
